Bug 930218 part 1.  Factor out the computation of block-size taken up by box-sizing into a separate function so we can reuse it.  r=dbaron